--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.2",
     "primeicons": "^6.0.1",
     "primevue": "^3.41.1",
     "vue": "^3.3.8"
