--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently npm:dev:frontend npm:dev:api",
+    "dev:frontend": "vite",
+    "dev:api": "npx wrangler pages dev functions --compatibility-date=2024-01-31",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
@@ -20,9 +22,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.2",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0",
-    "vitest": "^1.1.3"
+    "vitest": "^1.1.3",
+    "wrangler": "^3.24.0"
   }
 }
